--- a/views/error.hbs
+++ b/views/error.hbs
@@ -26,7 +26,7 @@
 <div class="container">
   <h1 class="errorMessages text-center">error!</h1>
   <h2 class="errorMessages text-center">omg! there was an error on the server!</h2>
-  <h2 class="errorMessages text-center">call the police and shut down everything! do it now!</h2>
+  <h2 class="errorMessages text-center">call the police and shut everything down! do it now!</h2>
 
   <img class="errorMessages gif" src="/images/police.gif" alt="alt-police!">
 </div>
