almost fixed the newsfeed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -165,7 +165,8 @@ main {
   margin-top: 3rem; }
 
 .gifHello {
-  border-radius: 5%; }
+  border-radius: 5%;
+  max-width: 550px; }
 
 #message {
   width: 30rem;
@@ -199,5 +200,33 @@ main {
   text-transform: uppercase;
   font-weight: bolder;
   font-size: 1.1875rem; }
+
+.marginGifBox {
+  margin-top: 2rem; }
+
+.gifNews {
+  width: 400px;
+  max-height: 300px; }
+
+hr.line {
+  border-top: 1px solid white; }
+
+.horizontal-scroll {
+  background-color: transparent;
+  overflow: hidden;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  padding: 5px 0; }
+
+.item {
+  display: inline-block;
+  background-color: transparent;
+  text-align: center;
+  font-size: 1rem;
+  margin: 0 10px; }
+
+.spanSymbol {
+  color: white; }
 
 /*# sourceMappingURL=style.css.map */
