--- a/views/post/add.hbs
+++ b/views/post/add.hbs
@@ -33,7 +33,7 @@
             </div>
             <div class="postContainer">
                 <h3>insert your story</h3>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea type="text" name="body" class="form-control" id="formControlTextarea" rows="3"></textarea>
                 {{!-- <input type="text" name="body" id="message"> --}}
             </div>
             <div class="postContainer">
