--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -146,7 +146,8 @@ main {
   margin-top: 4rem; }
 
 .funcionalitiesElem {
-  font-size: 1.3rem; }
+  font-size: 1.3rem;
+  text-decoration: none; }
 
 .titleEditProf {
   margin-top: 3rem; }
@@ -159,7 +160,11 @@ main {
 
 .buttonsProfile {
   background-color: #138396;
-  width: 18rem; }
+  width: 18rem;
+  text-decoration: none !important; }
+
+.buttonsProfile:hover {
+  background-color: #1E2A36; }
 
 .photoUpload {
   margin-top: 3rem; }
@@ -183,8 +188,12 @@ main {
 .postButton {
   background-color: #138396; }
 
+.postButton:hover {
+  background-color: #1E2A36; }
+
 .newsfeed {
-  margin-top: 2rem; }
+  margin-top: 2rem;
+  margin-bottom: 1rem; }
 
 .ulNewsfeed {
   list-style-type: none;
@@ -200,6 +209,9 @@ main {
   text-transform: uppercase;
   font-weight: bolder;
   font-size: 1.1875rem; }
+
+.usersList:hover {
+  color: white; }
 
 .marginGifBox {
   margin-top: 2rem; }
@@ -228,5 +240,32 @@ hr.line {
 
 .spanSymbol {
   color: white; }
+
+.postBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 1rem;
+  margin-bottom: 1rem; }
+
+.photoPost {
+  border-radius: 50%;
+  width: 14rem;
+  height: 14rem; }
+
+.postAuthor {
+  color: #3b9eb0 !important;
+  font-family: 'Josefin Sans', sans-serif;
+  text-transform: uppercase;
+  font-weight: bolder;
+  font-size: 1.1875rem; }
+
+.deletePostButton {
+  background-color: #138396;
+  width: 12rem; }
+
+.deletePostButton:hover {
+  background-color: #1E2A36; }
 
 /*# sourceMappingURL=style.css.map */
