--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -205,6 +205,7 @@ main {
 
 .funcionalitiesElem {
   font-size: 1.3rem;
+  text-decoration: none;
 }
 
 // edit profile
@@ -224,6 +225,11 @@ main {
 .buttonsProfile {
   background-color: #138396;
   width: 18rem;
+  text-decoration: none !important;
+}
+
+.buttonsProfile:hover {
+  background-color: #1E2A36;
 }
 
 // photo upload
@@ -257,10 +263,15 @@ main {
   background-color: #138396;
 }
 
+.postButton:hover {
+  background-color: #1E2A36;
+}
+
 // newsfeed
 
 .newsfeed {
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .ulNewsfeed {
@@ -279,6 +290,10 @@ main {
   text-transform: uppercase;
   font-weight: bolder;
   font-size: 1.1875rem;
+}
+
+.usersList:hover {
+  color: white;
 }
 
 .marginGifBox {
@@ -317,3 +332,35 @@ hr.line {
 }
 
 // posts
+
+.postBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.photoPost {
+  border-radius: 50%;
+  width: 14rem;
+  height: 14rem;
+}
+
+.postAuthor {
+  color: #3b9eb0 !important;
+  font-family: 'Josefin Sans', sans-serif;
+  text-transform: uppercase;
+  font-weight: bolder;
+  font-size: 1.1875rem;
+}
+
+.deletePostButton {
+  background-color: #138396;
+  width: 12rem;
+}
+
+.deletePostButton:hover {
+  background-color: #1E2A36;
+}
