--- a/views/newsfeed.hbs
+++ b/views/newsfeed.hbs
@@ -49,71 +49,75 @@
 <hr class="line">
 
 <div class="newsfeed row text-white">
-    <div class="col-9">
-        <h1>galactic thoughts</h1>
+    <div class="col-12">
+        <h2 class="text-center">galactic thoughts</h2>
         <br>
         <div>
             {{#each posts}}
             <div>
                 <div>
-                    <div class="row">
-                        <div>
-                            <div class="post-preview">
-                                <h2 class="post-title">
+                    <div class="post">
+                        <div class="postBox">
+                            <div>
+                                <h4 class="post-title">
                                     {{this.title}}
-                                </h2>
-                                <h3 class="post-content">
+                                </h4>
+                            </div>
+
+                            <div>
+                                <img class="photoPost" src="{{this.postImg}}">
+                            </div>
+
+                            <div>
+                                <h5 class="post-content">
                                     {{this.body}}
-                                </h3>
-                                <img class="profilePic" src="{{this.postImg}}" width="40px" height="40px">
+                                </h5>
+                            </div>
+
+                            <div>
                                 <p class="post-meta">Posted by
-                                    <a class="postAuthor" href="/profile/{{id}}">{{this.postedBy.username}}</a>
+                                    <a class="postAuthor">{{this.postedBy.username}}</a>
                                 </p>
-                                {{#if (isSameId this.postedBy._id ../userId)}}
+                            </div>
+                        </div>
 
-                                <div>
-                                    <!-- Button trigger modal -->
-                                    <button type="button"
-                                        class="btn btn-lg btn-block text-center btn-primary buttonDeleteColor"
-                                        data-toggle="modal" data-target="#exampleModal{{this._id}}">
-                                        delete
-                                    </button>
-                                    <!-- Modal -->
-                                    <div class="modal fade" id="exampleModal{{this._id}}" tabindex="-1" role="dialog"
-                                        aria-labelledby="exampleModalLabel{{this._id}}" aria-hidden="true">
-                                        <div class="modal-dialog" role="document">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title" id="exampleModalLabel{{this._id}}">DELETE
-                                                    </h5>
-                                                    <button type="button" class="close" data-dismiss="modal"
-                                                        aria-label="Close">
-                                                        <span aria-hidden="true">&times;</span>
-                                                    </button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    Are you sure?
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary"
-                                                        data-dismiss="modal">Cancel</button>
-                                                    <a href="/deletepost/{{this._id}}" class="btn btn-danger">Delete</a>
-
-                                                </div>
-                                            </div>
+                        {{#if (isSameId this.postedBy._id ../userId)}}
+                        <div class="postBox">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-lg btn-block text-center btn-primary deletePostButton"
+                                data-toggle="modal" data-target="#exampleModal{{this._id}}">
+                                delete post
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal{{this._id}}" tabindex="-1" role="dialog"
+                                aria-labelledby="exampleModalLabel{{this._id}}" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel{{this._id}}">delete
+                                            </h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body text-dark">
+                                            are you sure?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Cancel</button>
+                                            <a href="/deletepost/{{this._id}}" class="btn btn-danger">Delete</a>
                                         </div>
                                     </div>
                                 </div>
-                                {{/if}}
                             </div>
-                            <hr>
                         </div>
+                        {{/if}}
                     </div>
+                    <hr>
                 </div>
             </div>
-
             {{/each}}
         </div>
-
-
     </div>
+</div>
