--- a/views/newsfeed.hbs
+++ b/views/newsfeed.hbs
@@ -56,37 +56,36 @@
             {{#each posts}}
             <div>
                 <div>
-                    <div class="post">
-                        <div class="postBox">
-                            <div>
-                                <h4 class="post-title">
-                                    {{this.title}}
-                                </h4>
-                            </div>
-
+                    <div>
+                        <div class="post d-flex">
                             <div>
                                 {{#if postImg}}
-                                <img class="photoPost" src="{{this.postImg}}">
+                                <img class="photoPost order-1 p-2" src="{{this.postImg}}">
                                 {{/if}}
                             </div>
+                            <div class="flex-column">
+                                <div>
+                                    <h4 class="post-title align-self-center order-2 p-2">
+                                        {{this.title}}
+                                    </h4>
+                                </div>
 
-                            <div>
-                                <h5 class="post-content">
-                                    {{this.body}}
-                                </h5>
-                            </div>
-
-                            <div>
-                                <p class="post-meta">Posted by
-                                    <a class="postAuthor">{{this.postedBy.username}}</a>
-                                </p>
+                                <div>
+                                    <h5 class="post-content align-self-center order-3 p-2">
+                                        {{this.body}}
+                                    </h5>
+                                </div>
                             </div>
                         </div>
-
+                        <div>
+                            <p class="post-meta p-2">Posted by
+                                <a class="postAuthor">{{this.postedBy.username}}</a>
+                            </p>
+                        </div>
                         {{#if (isSameId this.postedBy._id ../userId)}}
                         <div class="postBox">
                             <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-lg btn-block text-center btn-primary deletePostButton"
+                            <button type="button" class="btn btn-lg btn-block text-center btn-primary deletePostButton p-2"
                                 data-toggle="modal" data-target="#exampleModal{{this._id}}">
                                 delete post
                             </button>
@@ -119,6 +118,7 @@
                     <hr>
                 </div>
             </div>
+            <hr class="line">
             {{/each}}
         </div>
     </div>
