text behind transparent navbar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,6 +34,14 @@ main {
   font-family: starWarsFont;
   font-size: 1rem; }
 
+.text {
+  position: absolute;
+  top: 60px;
+  bottom: 50px;
+  left: 50px;
+  right: 50px;
+  overflow: auto; }
+
 .container {
   display: flex;
   flex-direction: column;
