--- a/views/newsfeed.hbs
+++ b/views/newsfeed.hbs
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar navNewsfeed navbar-expand-lg fixed-top navbar-light mb-5">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5">
         <a class="navbar-brand text-white font-weight-bold" href="/newsfeed">Starbook <span
                 class="navbar-text text-info font-italic text-left"> the latest news from the galaxy!
             </span></a>
@@ -20,6 +20,7 @@
     </nav>
 </header>
 
+<div class="text">
 
 <div class="card mb-3 backTransp text-white marginGifBox">
     <div class="row no-gutters">
@@ -122,4 +123,6 @@
             {{/each}}
         </div>
     </div>
+</div>
+
 </div>
